--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -19,7 +19,7 @@
   color: #ffffff;
   text-decoration: none;
   letter-spacing: 2px;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  text-shadow: 0px 0px 30px #eb0707;
 }
 
 .nav-links {
@@ -29,7 +29,7 @@
 
 .nav-links a {
   text-decoration: none;
-  color: #e0d4f7;
+  color: #ffffff;
   font-size: 1rem;
   font-weight: 500;
   transition: color 0.3s ease, border-bottom 0.3s ease;
